Creation AccountController class

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,9 +31,9 @@
                 </a>
 
                 <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Home</a>
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Transfers</a>
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Profile</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none"  th:href="@{contactForm}">Contact Us</a>
                     <a class="py-2 link-body-emphasis text-decoration-none" th:href="@{logOut}">Sign out</a>
                 </nav>
             </div>
