--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -3,11 +3,13 @@ html,
 body {
   height: 90%;
 }
+
 body {
   background-image: url('../images/creditcard.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  filter: brightness(1.2);
 }
 
 .form-signin {
@@ -15,12 +17,10 @@ body {
   padding: 1.5rem;
   background-color: rgb(216, 241, 252);
   border-radius: 15px;
-
 }
 
 .form-signin .form-floating:focus-within {
   z-index: 2;
-
 }
 
 .form-signin input[type="email"] {
@@ -31,14 +31,22 @@ body {
 .form-signin input[type="password"] {
   margin-bottom: 10px;
 }
-.btn{
-  background-color: #2E86C1;
-  border-color: #4fadeb;
 
+.btn{
+  margin: auto;
+  display: block;
+  margin-top: 10%;
+  border: none;
+  border-radius: 1.5rem;
+  padding: 2%;
+  background: #0a4aa9;
+  color: #fff;
+  font-weight: 600;
+  width: 50%;
+  cursor: pointer;
 }
 
 /****************************** SIGN UP FORM   ******************************************/
-
 /*Conteneur principal*/
 .register{
   /*degradé lineer  en arrier*/
@@ -51,19 +59,7 @@ body {
   color: #fff;
   margin-top: 4%;
 }
-/*imputs*/
-.btnLogin{
-  margin: auto; 
-  display: block; 
-  border: none;
-  border-radius: 1.5rem;
-  padding: 2%;
-  background: #0a4aa9;
-  color: #fff;
-  font-weight: 600;
-  width: 50%;
-  cursor: pointer;
-}
+
 .register-right{
   background: #f8f9fa;
   border-top-left-radius: 10% 50%;
@@ -95,19 +91,6 @@ body {
 }
 .register-right {
  color: #0a4aa9;
-}
-.btnRegister{
-  margin: auto; 
-  display: block; 
-  margin-top: 10%;
-  border: none;
-  border-radius: 1.5rem;
-  padding: 2%;
-  background: #0a4aa9;
-  color: #fff;
-  font-weight: 600;
-  width: 50%;
-  cursor: pointer;
 }
 .register .nav-tabs{
   margin-top: 3%;
@@ -144,19 +127,15 @@ body {
 .form-group{
   margin-bottom: 5%;
   color: #0a4aa9;
-  
 }
 .register-right{
   margin: auto;
-  
 }
 .form-control::placeholder {
   /*color: #0a4aa9; */
   color: rgba(10, 74, 169, 0.5);
-  
 }
-/****************************** signIn2****************************************/
-
+/****************************** signIn2 ****************************************/
 .register-form1{
   display: flex; 
   justify-content: center;
@@ -165,6 +144,76 @@ body {
   padding: 10%; 
   margin-top: 10%; 
 }
+/***************************** INDEX **************************************/
+
+.container {
+  max-width: 960px;
+}
+
+.pricing-header {
+  max-width: 700px;
+}
+
+/****************************** DASHBOARD *******************************/
+.bi {
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+}
+
+.border-bottom{
+background-color: #0a4aa9;
+background: #fff;
+}
+/*
+ * Sidebar
+ */
+
+@media (min-width: 768px) {
+  .sidebar .offcanvas-lg {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 48px;
+  }
+  .navbar-search {
+    display: block;
+  }
+}
+
+.sidebar .nav-link {
+  font-size: .875rem;
+  font-weight: 500;
+}
+
+.sidebar .nav-link.active {
+  color: #2470dc;
+}
+
+.sidebar-heading {
+  font-size: .75rem;
+
+}
+
+/*
+ * Navbar
+ */
+ .background{
+  background-image: none;
+
+ }
+
+.navbar-brand {
+  padding-top: .75rem;
+  padding-bottom: .75rem;
+  background-color: rgba(0, 0, 0, .25);
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
+}
+
+.navbar .form-control {
+  padding: .75rem 1rem;
+}
+
+
 
 
 
