--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -18,7 +18,7 @@
                   <img src="images/feuille.jpg" alt=""/>
                   <h3>Welcome in</h3>
                   <p>You don't have un account?</p>
-                  <input type="submit" class="btnLogin"name="" th:value="signUp" th:action="@{/signup.html}"/><br/>
+                  <input type="submit" class="btn"name="" th:value="signUp" th:action="@{/signup.html}"/><br/>
 
               </div>
               <div class="col-md-9 register-right">
@@ -37,7 +37,7 @@
                                       <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault" th:name="rememberMe">
                                       <label class="form-check-label" for="flexCheckDefault">Remember me</label>
                                   </div>
-                                  <button type="submit" class="btn btn">Login</button>
+                                  <button type="submit" class="btn">Login</button>
                               </form>
                           </div>
                       </div>
