--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-bs-theme="auto" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" data-bs-theme="auto">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,20 +8,17 @@
     <meta name="generator" content="Hugo 0.122.0">
     <title>Signin Form</title>
     <link href="bootstrap.min.css" rel="stylesheet">
-    <!--<link rel="stylesheet" href="style.css">-->
-    <link href="index.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 
 </head>
-<main>
-    <body>
 
+<body class="background">
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
         <symbol id="check" viewBox="0 0 16 16">
             <title>Check</title>
             <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
         </symbol>
     </svg>
-
     <div class="container py-3">
         <header>
             <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
@@ -29,7 +26,6 @@
                     <!--<svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img"><title>Bootstrap</title><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg>-->
                     <span class="fs-4">Flashcash</span>
                 </a>
-
                 <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Transfers</a>
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Profile</a>
@@ -37,13 +33,11 @@
                     <a class="py-2 link-body-emphasis text-decoration-none" th:href="@{logOut}">Sign out</a>
                 </nav>
             </div>
-
             <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
                 <h1 class="display-4 fw-normal text-body-emphasis">Hello,<!--<span th:text="${firstname}">--></span></h1>
                 <p class="fs-5 text-body-secondary">Welcome to your dashboard</p>
             </div>
         </header>
-
         <main>
             <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
                 <div class="col">
@@ -60,7 +54,7 @@
                                 <li>Fully secured</li>
                             </ul>
                             <!--<button type="button" class="w-100 btn btn-lg btn" th:href="@{/addIban}">Here</button>-->
-                             <a th:href="@{/addIban}" class="w-100 btn btn-lg btn">Here</a>
+                             <a th:href="@{/addIban}" class="btn">Here</a>
                         </div>
                      </div>
                  </div>
@@ -77,7 +71,7 @@
                                  <li>Wordlwide</li>
                                  <li>Fully secured</li>
                              </ul>
-                             <button type="button" class="w-100 btn btn-lg btn">Get started</button>
+                             <button type="button" class="btn">Get started</button>
                          </div>
                      </div>
                  </div>
@@ -94,47 +88,63 @@
                                  <li>Instant deposit</li>
                                  <li>Fully secured</li>
                              </ul>
-                             <button type="button" class="w-100 btn btn-lg btn">Here</button>
+                             <button type="button" class="btn">Here</button>
                          </div>
                      </div>
                  </div>
              </div>
 
-             <h2 class="display-6 text-center mb-4">My account balance</h2>
+             <h2 class="display-6 text-center mb-4">My Iban</h2>
 
-             <div class="table-responsive">
-                 <table class="table text-center">
-                     <thead>
-                     <tr>
-                         <th style="width: 25%;"></th>
-                         <th style="width: 25%;">User</th>
-                         <th style="width: 25%;">Account</th>
-                         <th style="width: 25%;"></th>
-                     </tr>
-                     </thead>
-                     <tbody>
-                     <tr>
-                         <th scope="row" class="text-start">Public</th>
-                         <td><svg class="bi" width="24" height="25"><use xlink:href="#check"/></svg></td>
-                         <td><svg class="bi" width="24" height="25"><use xlink:href="#check"/></svg></td>
-                         <td><svg class="bi" width="24" height="25"><use xlink:href="#check"/></svg></td>
-                     </tr>
-                     <tr>
-                         <th scope="row" class="text-start">Private</th>
-                         <td></td>
-                         <td><svg class="bi" width="24" height="25"><use xlink:href="#check"/></svg></td>
-                         <td><svg class="bi" width="24" height="25"><use xlink:href="#check"/></svg></td>
-                     </tr>
-                     </tbody>
+            <div class="table-responsive">
+                <table class="table text-center">
+                    <thead>
+                    <tr>
+                        <th>IBAN</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td th:text='${iban}'></td>
+                    </tr>
+                    </tbody>
 
-                 </table>
-             </div>
+                </table>
+            </div>
+            <h2 class="display-6 text-center mb-4">My account balance</h2>
+
+            <div class="table-responsive">
+                <table class="table text-center">
+                    <thead>
+                    <tr>
+                        <th style="width: 25%;"></th>
+                        <th style="width: 25%;">Account</th>
+                        <th style="width: 25%;">Balance</th>
+                        <th style="width: 25%;"></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row" class="text-start"></th>
+                        <td><svg class="bi" width="24" height="25"></svg></td>
+                        <td><svg class="bi" width="24" height="25"></svg></td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row" class="text-start"></th>
+                        <td><svg class="bi" width="24" height="25"></svg></td>
+                        <td><svg class="bi" width="24" height="25"></svg></td>
+                    </tr>
+                    </tbody>
+
+                </table>
+            </div>
          </main>
 
          <footer class="pt-4 my-md-5 pt-md-5 border-top">
              <div class="row">
                  <div class="col-12 col-md">
-                     <img class="mb-2" src="../assets/brand/bootstrap-logo.svg" alt="" width="24" height="19">
+                     <img class="mb-2" src=" " alt="" width="24" height="19">
                      <small class="d-block mb-3 text-body-secondary">&copy;2024</small>
                  </div>
                  <div class="col-6 col-md">
@@ -171,9 +181,8 @@
      </div>
      <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 
-     </body>
+</body>
 
 
- </main>
  </html>
 
