--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -18,7 +18,7 @@
                     <img src="images/feuille.jpg" alt=""/>
                     <h3>Welcome in</h3>
                     <p> You already have an account?</p>
-                    <input type="submit" class="btnLogin"name="" th:value="Login" th:action="@{/signin.html}"/><br/>
+                    <input type="submit" class="btn" name="" th:value="Login" th:action="@{/signin.html}"/><br/>
                 </div>
                 <div class="col-md-9 register-right">
                         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
@@ -46,7 +46,7 @@
                                         <div class="form-group">
                                             <div class="form-check"><label class="form-check-label"><input class="form-check-input" type="checkbox">I agree to the license terms.</label></div>
                                         </div>
-                                        <input type="submit" class="btnRegister"  value="Sign Up"/>
+                                        <input type="submit" class="btn" value="Sign Up"/>
                                     </div>
                                 </form>
                             </div>
